Pages HTML completes.

--- a/app/Resources/views/site/bar.html.twig
+++ b/app/Resources/views/site/bar.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <section>
-        <h3>Bar</h3>
+        <h3 class="text-center">Bar</h3>
         <section>
             <p>Name, author,...</p>
             <p>Find</p>
