--- a/app/Resources/views/site/projets.html.twig
+++ b/app/Resources/views/site/projets.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <section>
-        <h3>Projets</h3>
+        <h3 class="text-center">Projets</h3>
         <section>
             <p>Name, author,...</p>
             <p>Find</p>
