mise en place css via sass, à finir

--- a/app/Resources/views/site/forum.html.twig
+++ b/app/Resources/views/site/forum.html.twig
@@ -1,11 +1,15 @@
 {% extends ':site:home.html.twig' %}
 {% block body %}
-    <h4>Titre du post</h4>
-    <div>
-        <img>fk_image</img>
-        <p>auteur</p>
-    </div>
-    <div>
-        <p>TEXTE (datails du post)</p>
-    </div>
+    <section>
+        <div class="col-lg-offset-1 col-lg-6 , section">
+            <h4>Titre du post</h4>
+            <div>
+                <img>fk_image</img>
+                <p>auteur</p>
+            </div>
+            <div>
+                <p>TEXTE (datails du post)</p>
+            </div>
+        </div>
+    </section>
 {% endblock %}
