--- a/app/Resources/views/site/membres.html.twig
+++ b/app/Resources/views/site/membres.html.twig
@@ -2,45 +2,47 @@
 
 {% block body %}
     <section>
-        <h3 class="text-center">Membres</h3>
-        <div>
-            <img class="pull-left" src="http://icon-icons.com/icons2/877/PNG/128/male-profile-picture_icon-icons.com_68388.png" alt="">
-            <p>Le Lorem Ipsum est simplement du faux texte employé 
-                dans la composition et la mise en page avant impression. 
-                Le Lorem Ipsum est le faux texte standard de l'imprimerie 
-                depuis les années 1500, quand un peintre anonyme assembla 
-                ensemble des morceaux de texte pour réaliser un livre 
-                spécimen de polices de texte. Il n'a pas fait que survivre 
-                cinq siècles, mais s'est aussi adapté à la bureautique 
-                informatique, sans que son contenu n'en soit modifié.</p>
-        </div>
-        </br>        
-        <div>
-            <img class="pull-right" src="http://icon-icons.com/icons2/877/PNG/128/male-profile-picture_icon-icons.com_68388.png" alt="">
-            <p>Le Lorem Ipsum est simplement du faux texte employé 
-                dans la composition et la mise en page avant impression. 
-                Le Lorem Ipsum est le faux texte standard de l'imprimerie 
-                depuis les années 1500, quand un peintre anonyme assembla 
-                ensemble des morceaux de texte pour réaliser un livre 
-                spécimen de polices de texte. Il n'a pas fait que survivre 
-                cinq siècles, mais s'est aussi adapté à la bureautique 
-                informatique, sans que son contenu n'en soit modifié.</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p></p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p></p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p></p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p></p>
+        <div class="col-lg-offset-1 col-lg-6 , section">
+            <h3 class="text-center">Membres</h3>
+            <div>
+                <img class="pull-left" src="http://icon-icons.com/icons2/877/PNG/128/male-profile-picture_icon-icons.com_68388.png" alt="">
+                <p>Le Lorem Ipsum est simplement du faux texte employé 
+                    dans la composition et la mise en page avant impression. 
+                    Le Lorem Ipsum est le faux texte standard de l'imprimerie 
+                    depuis les années 1500, quand un peintre anonyme assembla 
+                    ensemble des morceaux de texte pour réaliser un livre 
+                    spécimen de polices de texte. Il n'a pas fait que survivre 
+                    cinq siècles, mais s'est aussi adapté à la bureautique 
+                    informatique, sans que son contenu n'en soit modifié.</p>
+            </div>
+            </br>        
+            <div>
+                <img class="pull-right" src="http://icon-icons.com/icons2/877/PNG/128/male-profile-picture_icon-icons.com_68388.png" alt="">
+                <p>Le Lorem Ipsum est simplement du faux texte employé 
+                    dans la composition et la mise en page avant impression. 
+                    Le Lorem Ipsum est le faux texte standard de l'imprimerie 
+                    depuis les années 1500, quand un peintre anonyme assembla 
+                    ensemble des morceaux de texte pour réaliser un livre 
+                    spécimen de polices de texte. Il n'a pas fait que survivre 
+                    cinq siècles, mais s'est aussi adapté à la bureautique 
+                    informatique, sans que son contenu n'en soit modifié.</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p></p>
+            </div>
         </div>
     </section>
 {% endblock %}
