--- a/app/Resources/views/site/login.html.twig
+++ b/app/Resources/views/site/login.html.twig
@@ -1,9 +1,9 @@
 {% extends ':site:home.html.twig' %}
 {% block nav %}{% endblock %}
 {% block body %}
-    <section>
-        <div class="container">
-            <div class="col-lg-offset-4">
+    <section class="col-lg-offset-4">
+        <div class="container ">
+            <div class="login"> 
                 <p>username...</p>
                 <p>password</p>
                 <p>login</p>
