--- a/app/Resources/views/site/projets.html.twig
+++ b/app/Resources/views/site/projets.html.twig
@@ -2,24 +2,26 @@
 
 {% block body %}
     <section>
-        <h3 class="text-center">Projets</h3>
-        <section>
-            <p>Name, author,...</p>
-            <p>Find</p>
-        </section>
-        <section>
+        <div class="col-lg-offset-1 col-lg-6 , section">
+            <h3 class="text-center">Projets</h3>
+            <section>
+                <p>Name, author,...</p>
+                <p>Find</p>
+            </section>
             <section>
                 <section>
+                    <section>
+                    </section>
+                    <section>
+                    </section>
                 </section>
                 <section>
                 </section>
+                <section>
+                </section>
             </section>
             <section>
             </section>
-            <section>
-            </section>
-        </section>
-        <section>
-        </section>
+        </div>
     </section>
 {% endblock %}
