--- a/web/SASS/_activités.scss
+++ b/web/SASS/_activités.scss
@@ -1,10 +1,55 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 12 janv. 2017, 11:51:57
-    Author     : browne
-*/
+.evenements div div div
+{
+    padding: 1.5em;
+    margin: 0.8em;
+    background-color: $thirdColor;
+}
+.evenements div div 
+{
+   margin-top: 1em;
+   margin-right: -15px;
+   border : 1.5px solid black; 
+   background-color: darkgrey;
+}
+h2 
+{
+    font-size: 2vw;
+    margin-bottom: 7vh;
+    margin-top: 1vh;
+}
+h3
+{
+    font-size: 1.1em;
+}
+.evenements div div a:first-child
+{
+    text-decoration: none;
+    background-color: darkslategrey;
+    position:absolute;
+    padding: 0.3em;
+    margin-top: -12px;
+    margin-left: 220px;
+    width:15%;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.6s;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+:hover span {
 
+  padding-right: 13px;
+
+}
+
+.evenements div div a:hover
+{
+box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.evenements div div a:nth-child(n+2)
+{
+ 
+    text-decoration: none;
+    width: 30%;
+    text-align: center;
+    
+}
