--- a/web/SASS/_home.scss
+++ b/web/SASS/_home.scss
@@ -1,10 +1,31 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 12 janv. 2017, 12:01:25
-    Author     : browne
-*/
+.section
+{
+    border: 1px solid black;
+    background-color: $secondColor;
+    padding: 0.8em;
+    padding-top: 6.5em;
+    margin-top:1em;
+    
+}
 
+body
+{
+    font-family: "Comic Sans MS", Times, serif;
+}
+.login
+{
+    width:33%;
+}
+.login p
+{
+    border:$border;
+    background-color: white;
+    padding: 0.5em;
+    margin: 1em;
+}
+.login a
+{
+    float: right;
+    text-decoration: none;
+    padding-bottom: -15px;
+}
