--- a/web/SASS/_mixins.scss
+++ b/web/SASS/_mixins.scss
@@ -1,10 +1,5 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 12 janv. 2017, 11:54:13
-    Author     : browne
-*/
+$firstColor: blue;
+$secondColor: darkgray;
+$thirdColor: #F5FC9E;
+$border:1px solid black;
 
