--- a/app/Resources/views/site/home.html.twig
+++ b/app/Resources/views/site/home.html.twig
@@ -34,35 +34,14 @@
             <div class="row">
 
                 {% block body %}
-                    <section>
-                        <div class="col-lg-offset-1 col-lg-6">
-                            <p>Le Lorem Ipsum est simplement du faux texte employé 
-                                dans la composition et la mise en page avant impression. 
-                                Le Lorem Ipsum est le faux texte standard de l'imprimerie 
-                                depuis les années 1500, quand un peintre anonyme assembla 
-                                ensemble des morceaux de texte pour réaliser un livre 
-                                spécimen de polices de texte. Il n'a pas fait que survivre 
-                                cinq siècles, mais s'est aussi adapté à la bureautique 
-                                informatique, sans que son contenu n'en soit modifié. 
-                                Il a été popularisé dans les années 1960 grâce à la vente 
-                                de feuilles Letraset contenant des passages du Lorem Ipsum,
-                                et, plus récemment, par son inclusion dans des applications 
-                                de mise en page de texte, comme Aldus PageMaker.</p>
-                            <p>Le Lorem Ipsum est simplement du faux texte employé 
-                                dans la composition et la mise en page avant impression. 
-                                Le Lorem Ipsum est le faux texte standard de l'imprimerie 
-                                depuis les années 1500, quand un peintre anonyme assembla 
-                                ensemble des morceaux de texte pour réaliser un livre 
-                                spécimen de polices de texte. Il n'a pas fait que survivre 
-                                cinq siècles, mais s'est aussi adapté à la bureautique 
-                                informatique, sans que son contenu n'en soit modifié. 
-                                Il a été popularisé dans les années 1960 grâce à la vente 
-                                de feuilles Letraset contenant des passages du Lorem Ipsum,
-                                et, plus récemment, par son inclusion dans des applications 
-                                de mise en page de texte, comme Aldus PageMaker.</p>
-                            <p class='text-center'>Pour plus d'informations ou si vous voulez devenir contributeur ou collaborateur 
-                                sur un projet <a href="{{path('contact')}}">Contactez nous</a></p>
+                    <section class="col-lg-offset-1 col-lg-6 ">
+                        <div class="section">
+                            <h2 class="text-center">Presentation</h2>
+                            {% for presentation in description %}
+                                <p>{{presentation.description}}</p>
+                            {% endfor %}
                         </div>
+                        <p class='col-lg-offset-10'><a href="{{path('contact')}}">Contactez nous</a></p>
                     </section>
                 {% endblock %}
 
@@ -72,18 +51,14 @@
                             <div class="col-lg-offset-1 col-lg-3 ">
                                 <a class="col-lg-offset-10" href="{{path('login')}}">login</a>
                                 <h2 class="text-center">Activités</h2>
-                                <div>
-                                    <p>01/01/2017</p>
-                                    <h3 class="text-center">Repas du nouvel an</h3>
-                                    <p>J'invite qui veux a venir partager le premier repas de l'année chez ma voisine.</p>
-                                    <a class="col-lg-offset-9 col-lg-3" href=''>détails</a>
-                                </div>
-                                <div>
-                                    <p>24/12/2016</p>
-                                    <h3 class="text-center">Reveillon de Noël</h3>
-                                    <p>Reveillon de Noël chez le père noël. (prevoir verre de lait et cookies)</p>
-                                    <a class="col-lg-offset-9 col-lg-3" href=''>détails</a>
-                                </div>
+                                {% for activity in activities %}
+                                    <div class="section">
+                                        <p>{{activity.datetime}}</p>
+                                        <h3 class="text-center">{{activity.title}}</h3>
+                                        <p class="text-justify">{{activity.description}}</p>
+                                        <a class="col-lg-offset-9 col-lg-3" href='{{path('forum',{'id':activity.id })}}'>détails</a>
+                                    </div>
+                                {% endfor %} 
                                 <a class="col-lg-offset-6 text-center" href="" >&Congruent;</a>
                             </div>
                         </div>
