--- a/app/Resources/views/site/bar.html.twig
+++ b/app/Resources/views/site/bar.html.twig
@@ -5,23 +5,25 @@
         <div class="col-lg-offset-1 col-lg-6 , section">
             <h3 class="text-center">Bar</h3>
             <section>
-                <p>Name, author,...</p>
-                <p>Find</p>
+                <p></p>
+                <input placeholder="Name, author,...">
+                <input type="submit" value="Find">
             </section>
-            <section>
-                <section>
-                    <section>
+            {% for theme in themes %}
+                {% if theme.themeParent is empty%}
+                    <section class="section">
+                        <h4>{{theme.title}}</h4>
+                        {% if theme.themeParent%}
+                            <section class="section">
+                                <h4>{{theme.title}}</h4>
+                                <a href='{{path('validTheme',{'id':theme.id })}}'>éditer thème</a>
+                            </section>
+                        {% endif %}
+                        <a href='{{path('validTheme',{'id':theme.id })}}'>éditer thème</a>
                     </section>
-                    <section>
-                    </section>
-                </section>
-                <section>
-                </section>
-                <section>
-                </section>
-            </section>
-            <section>
-            </section>
+                {% endif %}
+            {% endfor %}
+            <a href='{{path('theme')}}'>ajout thème</a>
         </div>
     </section>
 {% endblock %}
