Modification des couleurs et ajout logo.

--- a/app/Resources/views/site/home.html.twig
+++ b/app/Resources/views/site/home.html.twig
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header class="text-center">
-            <h1>Find My cOOp !</h1>
+            <img src="{{ asset('image/logo.png') }}"/>
         </header>
         {% block nav %}
             <div class="container-fluid">
