--- a/web/SASS/_footer.scss
+++ b/web/SASS/_footer.scss
@@ -1,7 +1,9 @@
-footer
-{
+footer{
+    position: fixed buttom;
+    background-color: black;
+    color: gray;
     border-top: 1px solid black;
-    margin-top: 25px;
-    padding-top: 20px;
+    margin-top: 2.2em;
+    padding: 0.5em;
 }
 
