--- a/web/SASS/_mixins.scss
+++ b/web/SASS/_mixins.scss
@@ -1,5 +1,5 @@
-$firstColor: blue;
-$secondColor: darkgray;
-$thirdColor: #F5FC9E;
+$firstColor: #bdcabd ;
+$secondColor: lightblue;
+$thirdColor: #FEFF68;
 $border:1px solid black;
 
