--- a/web/SASS/_activités.scss
+++ b/web/SASS/_activités.scss
@@ -1,28 +1,25 @@
-.evenements div div div
-{
-    padding: 1.5em;
+.evenements div div div {
+    padding: 0.5em;
     margin: 0.8em;
+    margin-left: -0.5em;
+    margin-right: -0.5em;
     background-color: $thirdColor;
 }
-.evenements div div 
-{
-   margin-top: 1em;
-   margin-right: -15px;
-   border : 1.5px solid black; 
-   background-color: darkgrey;
+.evenements div div {
+    margin-top: 1em;
+    margin-right: -15px;
+    border : 1.5px solid black; 
+    background-color: lightblue;
 }
-h2 
-{
+h2 {
     font-size: 2vw;
-    margin-bottom: 7vh;
-    margin-top: 1vh;
+    margin: 1em;
+    /*margin-top: 1em;*/
 }
-h3
-{
-    font-size: 1.1em;
+h3 {
+    font-size: 2em;
 }
-.evenements div div a:first-child
-{
+.evenements div div a:first-child {
     text-decoration: none;
     background-color: darkslategrey;
     position:absolute;
@@ -36,20 +33,13 @@ h3
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 :hover span {
-
-  padding-right: 13px;
-
+    padding-right: 13px;
 }
-
-.evenements div div a:hover
-{
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+.evenements div div a:hover {
+    /*box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);*/
 }
-.evenements div div a:nth-child(n+2)
-{
- 
+.evenements div div a:nth-child(n+2) {
     text-decoration: none;
     width: 30%;
     text-align: center;
-    
 }
