--- a/web/SASS/_home.scss
+++ b/web/SASS/_home.scss
@@ -1,16 +1,17 @@
 .section
 {
-    border: 1px solid black;
+    border: $border;
     background-color: $secondColor;
     padding: 0.8em;
-    padding-top: 6.5em;
+    padding: 3em;
     margin-top:1em;
     
 }
 
 body
 {
-    font-family: "Comic Sans MS", Times, serif;
+    font-family: cursive;
+    background-color: $firstColor  ;
 }
 .login
 {
