--- a/app/Resources/views/site/forum.html.twig
+++ b/app/Resources/views/site/forum.html.twig
@@ -1,7 +1,7 @@
 {% extends ':site:home.html.twig' %}
 {% block body %}
     <section>
-        <div class="col-lg-offset-1 col-lg-6 , section">
+        <div class="col-lg-offset-1 col-lg-6 section">
             <h4>Titre du post</h4>
             <div>
                 <img>fk_image</img>
