--- a/app/Resources/views/site/membres.html.twig
+++ b/app/Resources/views/site/membres.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
     <section>
-        <div class="col-lg-offset-1 col-lg-6 , section">
-            <h3 class="text-center">Membres</h3>
+        <div class="col-lg-8 , section">
+            <h2 class="text-center">Membres</h2>
             <div>
                 {% for membre  in membres %}
                     <img class="pull-left" src="http://icon-icons.com/icons2/877/PNG/128/male-profile-picture_icon-icons.com_68388.png" alt="">
