--- a/app/Resources/views/site/bar.html.twig
+++ b/app/Resources/views/site/bar.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
     <section>
-        <div class="col-lg-offset-1 col-lg-6 , section">
-            <h3 class="text-center">Bar</h3>
+        <div class="col-lg-8 , section">
+            <h2 class="text-center">Bar</h2>
             <section>
                 <p></p>
                 <input placeholder="Name, author,...">
@@ -13,12 +13,12 @@
                 {% if theme.themeParent is empty%}
                     <section class="section">
                         <h4>{{theme.title}}</h4>
-                        {% if theme.themeParent%}
+                        {#{% if theme.themeParent%}#}
                             <section class="section">
                                 <h4>{{theme.title}}</h4>
                                 <a href='{{path('validTheme',{'id':theme.id })}}'>éditer thème</a>
                             </section>
-                        {% endif %}
+                       {# {% endif %}#}
                         <a href='{{path('validTheme',{'id':theme.id })}}'>éditer thème</a>
                     </section>
                 {% endif %}
