--- a/app/Resources/views/site/contact.html.twig
+++ b/app/Resources/views/site/contact.html.twig
@@ -1,10 +1,10 @@
 {% extends ':site:home.html.twig' %}
 {% block nav %}{% endblock %}
 {% block body %}
-    <section class="container-fluid">
-        <div class="row">
-            <h3 class="col-lg-offset-6">Contact</h3>
-            <div class="col-lg-offset-6">
+    <section {#class="container-fluid"#}>
+        <div {#class="row"#}>
+            <h3 class="text-center">Contact</h3>
+            <div class="col-lg-offset-4">
                 <section>
                     <p>email</p>
                 </section>
@@ -20,7 +20,7 @@
                     <p>Envoyer</p>
                 </section>
                 <section>
-                    <a class="col-lg-offset-6" href="{{path('home')}}">Annuler</a>
+                    <a class="col-lg-offset-5" href="{{path('home')}}"><button type="button" class="btn btn-default">Annuler</button></a>
                 </section>
             </div>
         </div>
