--- a/app/Resources/views/site/projets.html.twig
+++ b/app/Resources/views/site/projets.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
     <section>
-        <div class="col-lg-offset-1 col-lg-6 , section">
-            <h3 class="text-center">Projets</h3>
+        <div class="col-lg-8 , section">
+            <h2 class="text-center">Projets</h2>
             <section>
                 <p>Name, author,...</p>
                 <p>Find</p>
